Changed the color of the pagination. Fixed the overflow with pre-formatted text.

--- a/markliu/media/css/custom.css
+++ b/markliu/media/css/custom.css
@@ -46,6 +46,10 @@ h3,h4,h5,h6 {
     border-bottom: 1px solid black;
 }
 
+pre {
+    overflow: hidden;
+}
+
 #content {
     color: #36424A;
 }
